[tool.poetry]
name = "aiide"
version = "0.0.6"
description = "aiide is a framework to build LLM copilots."
authors = ["Anilturaga"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/Anilturaga/aiide"
repository = "https://github.com/Anilturaga/aiide"
keywords = ["llm", "openai"]

[tool.poetry.dependencies]
python = "^3.10"
litellm = "^1.52.16"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
